adicionado rota para recuperar indicador por id
