# app/Http/Controllers/API/IndicadorApiController.php
@@ -9,7 +9,57 @@ use Illuminate\Http\Request;
 
 class IndicadorApiController extends Controller
 {
-    
+
+/**
+    * @OA\Get(
+    *      path="/indicadores",
+    *      tags={"Indicadores"},
+    *      summary="Pega Todos Indicadores",
+    *      description="Retorna a lista de todos Indicadores existentes na base",
+    *      @OA\Parameter(
+    *          name="id",
+    *          required=true,
+    *          in="path",
+    *          @OA\Schema(
+    *              type="integer"
+    *          )
+    *      ),
+    *      @OA\Response(
+    *          response=200,
+    *          description="Sucesso",
+    *          @OA\JsonContent(
+    *              @OA\Examples(
+    *                  example="result",
+    *                  value={
+    *                          "id": "integer",
+    *                          "nome": "string",
+    *                          "imagem": "string",
+    *                          "nota_tecnica": "string",
+    *                          "observacao": "string",
+    *                          "projeto_id": "integer",
+    *                          "projeto": "string",
+    *                          "fonte": {
+    *                              "id": "integer",
+    *                              "nome": "string",
+    *                              "descricao": "string",
+    *                          },
+    *                          "departamento": {
+    *                              "id": "integer",
+    *                              "sigla": "string",
+    *                              "nome": "string",
+    *                          },
+    *                          "periodicidade": "string",
+    *                  },
+    *                  summary="Um exemplo de resultado"
+    *              ),
+    *          )
+    *       ),
+    *      @OA\Response(
+    *          response=404,
+    *          description="Não Encontrado"
+    *      )
+    *     )
+    */
     public function index(Request $request)
     {
         $indicadores = Indicador::query()
@@ -24,7 +74,7 @@ class IndicadorApiController extends Controller
 
         return IndicadorResource::collection($indicadores);
     }
-    
+
     /**
     * @OA\Get(
     *      path="/indicadores/{id}",
@@ -90,5 +140,68 @@ class IndicadorApiController extends Controller
 
         return IndicadorResource::collection($indicadores);
 
+    }
+/**
+    * @OA\Get(
+    *      path="/indicador/{id}",
+    *      tags={"Indicadores"},
+    *      summary="Pega Indicador",
+    *      description="Retorna o Indicador com o Id especificado",
+    *      @OA\Parameter(
+    *          name="id",
+    *          required=true,
+    *          in="path",
+    *          @OA\Schema(
+    *              type="integer"
+    *          )
+    *      ),
+    *      @OA\Response(
+    *          response=200,
+    *          description="Sucesso",
+    *          @OA\JsonContent(
+    *              @OA\Examples(
+    *                  example="result",
+    *                  value={
+    *                          "id": "integer",
+    *                          "nome": "string",
+    *                          "imagem": "string",
+    *                          "nota_tecnica": "string",
+    *                          "observacao": "string",
+    *                          "projeto_id": "integer",
+    *                          "projeto": "string",
+    *                          "fonte": {
+    *                              "id": "integer",
+    *                              "nome": "string",
+    *                              "descricao": "string",
+    *                          },
+    *                          "departamento": {
+    *                              "id": "integer",
+    *                              "sigla": "string",
+    *                              "nome": "string",
+    *                          },
+    *                          "periodicidade": "string",
+    *                  },
+    *                  summary="Um exemplo de resultado"
+    *              ),
+    *          )
+    *       ),
+    *      @OA\Response(
+    *          response=404,
+    *          description="Não Encontrado"
+    *      )
+    *     )
+    */
+
+
+    public function getIndicador(Request $request, int $id)
+    {
+        $indicador = Indicador::with('departamento', 'fonte', 'projeto', 'periodicidade')->findOrFail($id);
+
+        if($indicador == null) {
+            return response()->json([
+                'mensagem' => 'Indicador naõ encontrado!',
+            ], 404);
+        }
+        return new IndicadorResource($indicador);
     }
 }
