# storage/api-docs/api-docs.json
@@ -14,14 +14,72 @@
     },
     "servers": [
         {
-            "url": "http://10.30.18.9:81/indicadores_be/api",
+            "url": "http://127.0.0.1:8000/api",
             "description": "Demo API Server"
         },
         {
-            "url": "http://10.30.18.9:81/indicadores_be"
+            "url": "http://localhost"
         }
     ],
     "paths": {
+        "/indicadores": {
+            "get": {
+                "tags": [
+                    "Indicadores"
+                ],
+                "summary": "Pega Todos Indicadores",
+                "description": "Retorna a lista de todos Indicadores existentes na base",
+                "operationId": "e19cb4a65abf66651a0c640be5e82d77",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Sucesso",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "examples": {
+                                    "result": {
+                                        "summary": "Um exemplo de resultado",
+                                        "value": {
+                                            "id": "integer",
+                                            "nome": "string",
+                                            "imagem": "string",
+                                            "nota_tecnica": "string",
+                                            "observacao": "string",
+                                            "projeto_id": "integer",
+                                            "projeto": "string",
+                                            "fonte": {
+                                                "id": "integer",
+                                                "nome": "string",
+                                                "descricao": "string"
+                                            },
+                                            "departamento": {
+                                                "id": "integer",
+                                                "sigla": "string",
+                                                "nome": "string"
+                                            },
+                                            "periodicidade": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Não Encontrado"
+                    }
+                }
+            }
+        },
         "/indicadores/{id}": {
             "get": {
                 "tags": [
@@ -30,6 +88,64 @@
                 "summary": "Pega a lista de Indicadores",
                 "description": "Retorna a lista de Indicadores",
                 "operationId": "de7380811dd6727c968a33b913dacf7f",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Sucesso",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "examples": {
+                                    "result": {
+                                        "summary": "Um exemplo de resultado",
+                                        "value": {
+                                            "id": "integer",
+                                            "nome": "string",
+                                            "imagem": "string",
+                                            "nota_tecnica": "string",
+                                            "observacao": "string",
+                                            "projeto_id": "integer",
+                                            "projeto": "string",
+                                            "fonte": {
+                                                "id": "integer",
+                                                "nome": "string",
+                                                "descricao": "string"
+                                            },
+                                            "departamento": {
+                                                "id": "integer",
+                                                "sigla": "string",
+                                                "nome": "string"
+                                            },
+                                            "periodicidade": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Não Encontrado"
+                    }
+                }
+            }
+        },
+        "/indicador/{id}": {
+            "get": {
+                "tags": [
+                    "Indicadores"
+                ],
+                "summary": "Pega Indicador",
+                "description": "Retorna o Indicador com o Id especificado",
+                "operationId": "527d6032075940ab86c302e10b6785b1",
                 "parameters": [
                     {
                         "name": "id",
